Translate "button" section

--- a/translations/da.json
+++ b/translations/da.json
@@ -15,7 +15,7 @@
     "success": "E-mail afsendt med info om nulstilling af kodeord"
   },
   "button": {
-    "save": "Save"
+    "save": "Gem"
   },
   "wh": {
     "userCount": "online now.",
