--- a/translations/da.json
+++ b/translations/da.json
@@ -32,7 +32,7 @@
       "dns": "Domæne",
       "data": "Backup og Data"
     },
-    "localNotice": "<span class='icon icon-code'> Local development</span> Saves here will only trigger builds locally, not on your live website.",
+    "localNotice": "<span class='icon icon-code'> Lokal udvikling</span> Det der gemmes her vil kun starte lokale builds, ikke på live websitet.",
     "index": {
       "welcome": {
         "title": "Welcome to your CMS",
